[package]
name = "run-kit"
version = "0.7.1"
edition = "2024"
description = "Universal multi-language runner and smart REPL"
license = "Apache-2.0"
repository = "https://github.com/esubaalew/run"
readme = "README.md"
authors = ["Esubalew Chekol <esubalewchekol6@gmail.com>"]
homepage = "https://esubalew.et"
documentation = "https://run.esubalew.et"

[lib]
name = "run"

[[bin]]
name = "run"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Esubalew Chekol <esubalewchekol6@gmail.com>"
depends = "libc6 (>= 2.31)"
section = "utils"
priority = "optional"
license-file = ["LICENSE", "4"]
assets = [
    [
        "target/release/run",
        "usr/bin/run",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/run/README.md",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/run/LICENSE",
        "644",
    ],
]
extended-description = "Universal multi-language runner and smart REPL with inline snippets, persistent sessions, and support for 20+ languages."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
regex = "1.10"
rustyline = "13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6.0"
tempfile = "3.10"
syntect = "5.2"
shell-words = "1.1"

# Run 2.0 dependencies
thiserror = "1.0"
rand_core = { version = "0.6", optional = true }
semver = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
notify = { version = "6.0", optional = true }
futures = { version = "0.3", optional = true }
reqwest = { version = "0.12", features = ["json", "multipart"], optional = true }
urlencoding = "2.1"
cap-std = "3.4"
indexmap = "2.13.0"
wit-parser = { version = "0.217.1", features = ["decoding"] }

# WASI 0.2 Component Runtime (wasmtime)
wasmtime = { version = "36.0", features = ["component-model", "cranelift", "async"], optional = true }
wasmtime-wasi = { version = "33.0", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
default = []
v2 = ["tokio", "notify", "futures", "reqwest", "wasmtime", "wasmtime-wasi", "rand_core", "serde_yaml"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.5"
futures = "0.3"
wat = "1.244.0"

[[bench]]
name = "run_v2"
harness = false
required-features = ["v2"]

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
